front-end/app/styles/_chapter.scss
/* ... */
.organize-chapter-btn {
  background-color: #e0e0e0; // gray-300

  &:hover {
    background-color: #bdbdbd !important; // gray-400
  }

  &[disabled] {
    pointer-events: none;
    background-color: #eeeeee; // gray-200
  }

  md-icon {
    color: $white !important;
  }
}
.organize-chapters {
  position: absolute;
  left: 100%;
  top: .3rem;
  width: $wvp-chapter-toolbar-width;
  display: flex;
  justify-content: center;

  @media (max-width: 959px) {
    left: auto;
    right: 0;
    top: auto;
    bottom: 100%;
    width: auto;
    margin-bottom: 1rem;

    .md-button {
      width: 2rem;
      height: 2rem;
      min-height: 2rem;
      padding: .375rem;
      font-size: .625rem;

      md-icon {
        font-size: 1.25rem;
        min-width: 1em;
        min-height: 1em;
      }
    }
  }
}

// the pencil button
.toggle-chapter-focus {
  position: absolute;
  right: .5rem;
  top: .5rem;
  z-index: 2;
  width: auto;
  min-width: 0;
  margin: 0 !important;

  &:not([disabled]).md-focused,
  &:not([disabled]):hover {
    background-color: transparent;
    
    md-icon {
      color: #03a9f4; // light-blue-500 // #9c27b0; // purple-500
    }
  }

  md-icon {
    color: #e0e0e0; // gray-300
    transition: color .2s;
    will-change: color;

    .is-focused & {
      color: #03a9f4; // light-blue-500 // #9c27b0; // purple-500
    }
  }
}

// toolbar: manage blocks & embeds
.chapter-toolbar {
  position: absolute;
  z-index: 1;
  left: 100%;
  top: 0;
  width: $wvp-chapter-toolbar-width;
  height: 100%;
  min-width: 20rem;
  background-color: $white;
  box-shadow: $whiteframe-shadow-4dp;
  transition: transform .2s, box-shadow .2s;
  will-change: transform, box-shadow;

  .portfolio-chapter:not(.is-focused) & {
    pointer-events: none;
    transform: translateX(-100%);
    box-shadow:
      0px 1px 3px 0px rgba(0,0,0,0),
      0px 1px 1px 0px rgba(0,0,0,0),
      0px 2px 1px -1px rgba(0,0,0,0);
  }

  > div > div {
    display: flex;
    flex-wrap: wrap;
    padding: 1rem;

    h5 {
      width: 100%;
      font-weight: 500;
      margin: 0 0 1rem;
    }

    + div {
      border-top: 1px solid #e0e0e0; // gray-300
    }
  }

  @media (min-width: 960px) {
    .sticky {
      position: sticky;
      top: $md-toolbar-height;
      left: 0;

      &.is-at-bottom {
        position: absolute;
        bottom: 0;
        top: auto !important;
        left: 0 !important;
      }
    }
  }

  @media (max-width: 959px) {
    position: sticky;
    z-index: 3;
    top: 56px;
    left: 0;
    width: calc(100% - 1px);
    height: 0;
    min-width: 0;
    margin-right: -1px;
    padding-right: 1px;
    float: left;
    box-shadow: none;
    overflow: hidden;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
    transition: height .2s;
    will-change: height;

    .is-focused & {
      height: 7.875rem;
    }

    &.is-at-bottom {
      position: absolute;
      top: auto;
      bottom: 0;
    }

    .portfolio-chapter:not(.is-focused) & {
      transform: none;
    }

    > div {
      display: flex;
      width: auto !important;

      > div {
        flex-wrap: nowrap;
        padding-top: 2.6250rem;
        position: relative;

        h5 {
          position: absolute;
          left: 1rem;
          top: 1rem;
        }

        + div {
          border-top: none;
          border-left: 1px solid #e0e0e0; // gray-300
        }
      }
    }
  }

  @media (max-width: 599px) {
    .is-focused & {
      height: 4rem;
    }

    > div > div {
      padding: 1.6rem .5rem .5rem;

      h5 {
        top: .5rem;
        font-size: .7rem;
      }
    }
  }
}
/**
 * If .chapter-toolbar which is sticky gets additional class .is-at-bottom (and hence position: absolute)
 * then it's taken out of the normal content flow and the toolbar no longer takes up space and the
 * whole .portfolio-chapter's height shrinks (by 7.875rem). This 1px wide element that we float next
 * to the sticky toolbar prevents that.
 */
.chapter-toolbar-helper {
  width: 1px;
  height: 0;
  display: none;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
  transition: height .2s;
  will-change: height;

  @media (max-width: 959px) {
    display: block;
    float: left;

    .is-focused & {
      height: 7.875rem;
    }
  }
}
.chapter-btn {
  width: 25%;
  text-align: center;
  cursor: pointer;
  color: #9e9e9e; // gray-500
  padding: 0 .25rem;
  box-sizing: border-box;
  transition: color .2s;
  will-change: color;

  &.chapter-btn--new-material {
    md-icon {
      margin: 0 -.125rem;
      width: 1.75rem;

      @media (max-width: 599px) {
        width: 1.5rem;
        height: 1.25rem;
      }
    }
  }

  &[disabled] {
    opacity: .5;
    pointer-events: none;
  }

  md-icon {
    color: #9e9e9e; // gray-500
    transition: color .2s;
    will-change: color;
  }

  button {
    display: inline-block;
    margin: 0;
  }

  label {
    cursor: pointer;
    font-size: .75rem;
  }

  &:hover {
    &, md-icon {
      color: #616161; // gray-700
    }
  }

  @media (max-width: 959px) {
    width: auto !important;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 5rem;
    padding: 0 .3rem;
  }

  @media (max-width: 599px) {
    max-width: none;
    padding: 0;

    .md-button {
      margin: 0;
      width: 2rem;
      height: 2rem;
      min-height: 2rem;
      padding: .375rem;

      md-icon {
        font-size: 1.25rem;
        min-width: 1em;
        min-height: 1em;
      }
    }

    label {
      display: none;
    }
  }
}
/* ... */

